--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-number-format": "^5.2.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
