--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.4",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/system": "^5.14.7",
+    "@mui/x-charts": "^6.0.0-alpha.9",
     "@mui/x-data-grid": "^6.11.1",
     "@mui/x-data-grid-generator": "^6.11.1",
     "@mui/x-date-pickers": "^6.10.1",
